k8s/reviews-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-dev-reviews
  namespace: student11-bookinfo-dev
  labels:
    app: bookinfo-dev-reviews
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookinfo-dev-reviews
  template:
    metadata:
      labels:
        app: bookinfo-dev-reviews
    spec:
      containers:
      - name: bookinfo-dev-reviews
        image: ghcr.io/dungpornbt/bookinfo-reviews:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
          name: web-port
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 9080
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /health
            port: 9080
            scheme: HTTP
      imagePullSecrets:
      - name: registry-bookinfo
